first version api 3

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,27 @@
 spring:
-  config:
-    import: optional:configserver:http://localhost:8080
-  application:
-    name: service-harmony
+  datasource:
+    url: jdbc:postgresql://localhost:5432/harmony_db
+    username: gallagher
+    password: gallagher09
+    driver-class-name: org.postgresql.Driver
+  
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    database: postgresql
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
 
-#logging:
-#  level:
-#    org:
-#      springframework: DEBUG
-#      hibernate:  DEBUG
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: gallagher
+    password: gallagher09
+
+logging:
+  level:
+    org.springframework.amqp: DEBUG
+    org.springframework: DEBUG
+
+server:
+  port: 8200
